# atrv_ur5e

./: .gitignore  README.md
atrv_moveit_planning_scene/: CMakeLists.txt  package.xml  setup.py
atrv_moveit_planning_scene/ros/scripts/: atrv_moveit_scene_node
atrv_moveit_planning_scene/ros/src/atrv_moveit_planning_scene_ros/: atrv_moveit_scene_node.py
atrv_pregrasp_planning/: CMakeLists.txt  package.xml
atrv_pregrasp_planning/ros/config/: gripper_configuration_matrix.yaml
atrv_pregrasp_planning/ros/launch/: pose_mock_up_gui.launch  pregrasp_planner.launch
atrvjr/description/atrvjr_description/launch/: map_config.rviz  new_rviz_config.rviz
atrvjr/description/atrvjr_description/urdf/: atrvjr.xacro  atrvjr_wheels.xacro
atrvjr/description/atrvjr_description/worlds/: ch3world.world
atrvjr/drivers/atrvjr/launch/: atrvjr_hw.launch  atrvjr_hw_no_gps.launch  atrvjr_sim.launch  bringup_common.launch  ch3.launch
atrvjr/navigation/localization_switch/: CMakeLists.txt  package.xml  setup.py
atrvjr/navigation/localization_switch/ros/config/: switch_area.yaml  switch_params.yaml
atrvjr/navigation/localization_switch/ros/doc/: README.md
atrvjr/navigation/localization_switch/ros/launch/: localization_switch.launch
atrvjr/navigation/localization_switch/ros/scripts/: switch_node
atrvjr/navigation/localization_switch/ros/src/localization_switch_ros/: switch.py
atrvjr/navigation/maps/: CMakeLists.txt  package.xml  setup.py
atrvjr/navigation/maps/maps/ch3_sim/: map.yaml  navigation_goals.yaml
atrvjr/navigation/maps/ros/doc/: README.md
atrvjr/navigation/maps/ros/launch/: maps.launch
atrvjr/navigation/maps/ros/scripts/: maps_node  navigation_goals_as_marker
atrvjr/navigation/maps/ros/src/maps_ros/: maps_node.py
laser_line_extraction/launch/: example.launch
mbot_pregrasp_planning/ros/launch/: pregrasp_planner.launch
planning/: package.xml  setup.py
planning/actions/: CMakeLists.txt  navigation.py  package.xml  setup.py
planning/actions/ros/scripts/: fire_depth_estimation_node
planning/actions/ros/src/actions_ros/: edge_detector_class.py  fire_depth_estimation.py  first_brick.py  laser_allign_class.py  navigation.py  object_listener.py  orange.py  pick_RGB_class.py  pick_place.py  place_algorithm_class.py  place_first.py  plate_detector_class.py  terabee_threshold.py  test_script.py  wall_dispatcher.py
planning/actions/ros/src/actions_ros/Non_classes/: color_detector.py  pick_RGB.py  place_algorithm.py  plate_detector.py
planning/planning/: CMakeLists.txt  package.xml  setup.py
planning/planning/ros/launch/: Wall1.txt  ch3.launch  ch_2_sim.launch  ch_3_sim.launch  detect_fire.launch  pump_water.launch  testbed.launch
planning/planning/ros/scripts/: ch2_sm_node  ch3_sm_node  pump_water_sm_node  testbed_detect_only_sm_node  testbed_sm_node
planning/planning/ros/src/planning_ros/: Wall1.txt  ch2_sm.py  ch3_sm.py  ch3_sm_test.py  pump_water.py  testbed_detect_only_sm.py  testbed_sm.py
planning/state_machines/launch/: ch_3_sim.launch
planning/state_machines/src/: ch3_sm.py
planning/states/: CMakeLists.txt  atrv_states.py  package.xml  setup.py
planning/states/ros/src/states_ros/: atrv_states.py  atrv_states_ch3.py
simulation/building_editor_models/mbzircbuilding/: model.config  model.sdf
universal_robot-ur_e_fix/gazebo_ros_link_attacher-master/worlds/: test_attacher.world
universal_robot-ur_e_fix/ur5_e_moveit_config_joao/config/: atrv_ur5e.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
universal_robot-ur_e_fix/ur5_e_moveit_config_joao/launch/: move_group.launch  planning_context.launch
universal_robot-ur_e_fix/ur_e_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  ur5e.urdf.xacro  ur5e_robot.urdf.xacro
universal_robot-ur_e_fix/ur_e_gazebo/controller/: arm_controller_ur5e.yaml  common.gazebo.xacro
universal_robot-ur_e_fix/ur_e_gazebo/launch/: ur5e.launch
ur5_magnetic_gripper/scripts/: fake_brick_pose.py  laser_brick_detection.py  pick_test.py
(+32 files in other folders)
