<?xml version="1.0"?>
<package>
 <name>states</name>
 <version>1.0.0</version>
 <description>
    states
 </description>

 <license>GPLv3</license>

 <author email="rui.bettencourt@tecnico.ulisboa.pt">Rui Bettencourt</author>
 <maintainer email="rui.bettencourt@tecnico.ulisboa.pt">Rui Bettencourt</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 <buildtool_depend>smach</buildtool_depend>

</package>
